--- a/html/Merecedes me.html
+++ b/html/Merecedes me.html
@@ -20,6 +20,11 @@
     />
 
     <link rel="stylesheet" href="../css/Merecedes me.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../img/Benz_Favicon.ico"
+    />
   </head>
   <body>
     <div id="main">
@@ -66,11 +71,11 @@
             <a href="">Digital Interlock Service</a>
             <ul class="digital_menu1">
               <li class="m1">
-                <a href="">Merecedes Me Intro</a>
+                <a href="../html/Merecedes me.html">Merecedes Me Intro</a>
               </li>
               <li class="m1">Merecedes Me ID</li>
               <li class="m1">
-                <a href="">Merecedes Me Connect</a>
+                <a href="../html/conect.html">Merecedes Me Connect</a>
               </li>
               <li class="m1">Merecedes Me Assistaunt</li>
               <li class="m1_a">
