--- a/html/conect.html
+++ b/html/conect.html
@@ -18,7 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;500&family=Noto+Sans:wght@100;400;700;900&family=Playfair+Display&family=Tapestry&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../img/Benz_Favicon.ico"
+    />
     <link rel="stylesheet" href="../css/conect.css" />
     <link rel="stylesheet" href="../css/aos.css" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -68,11 +72,11 @@
             <a href="">Digital Interlock Service</a>
             <ul class="digital_menu1">
               <li class="m1">
-                <a href="">Merecedes Me Intro</a>
+                <a href="../html/Merecedes me.html">Merecedes Me Intro</a>
               </li>
               <li class="m1">Merecedes Me ID</li>
               <li class="m1">
-                <a href="">Merecedes Me Connect</a>
+                <a href="../html/conect.html">Merecedes Me Connect</a>
               </li>
               <li class="m1">Merecedes Me Assistaunt</li>
               <li class="m1_a">
