--- a/html/service.html
+++ b/html/service.html
@@ -11,7 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;500&family=Noto+Sans:wght@100;400;700;900&family=Playfair+Display&family=Tapestry&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../img/Benz_Favicon.ico"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,9 +70,9 @@
           <li class="digital">
             <a href="">Digital Interlock Service</a>
             <ul class="digital_menu1">
-              <li class="m1"><a href="">Merecedes Me Intro</a></li>
+              <li class="m1"><a href="../html/Merecedes me.html">Merecedes Me Intro</a></li>
               <li class="m1">Merecedes Me ID</li>
-              <li class="m1"><a href="">Merecedes Me Connect</a></li>
+              <li class="m1"><a href="../html/conect.html">Merecedes Me Connect</a></li>
               <li class="m1">Merecedes Me Assistaunt</li>
               <li class="m1_a">
                 Merecedes Me Care ❯
