--- a/conect.html
+++ b/conect.html
@@ -69,7 +69,7 @@
             <a href="">Digital Interlock Service</a>
             <ul class="digital_menu1">
               <li class="m1">
-                <a href="./index.html">Merecedes Me Intro</a>
+                <a href="https://kkyuheak.github.io/benz-homepage/">Merecedes Me Intro</a>
               </li>
               <li class="m1">Merecedes Me ID</li>
               <li class="m1">
