--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
             <a href="">Model</a>
             <ul class="model_menu1">
               <li class="m1">
-                <a href="https://kkyuheak.github.io/benz-homepage/">Hatchback</a>
+                <a href="https://kkyuheak.github.io/benz-homepage">Hatchback</a>
               </li>
               <li class="m1">Sedan</li>
               <li class="m1">Coupe</li>
